# $Id$ 

man1dedir   = @mandir@/de/man1
man1de_DATA = de/micq.1
man5dedir   = @mandir@/de/man5
man5de_DATA = de/micqrc.5
man7dedir   = @mandir@/de/man7
man7de_DATA = de/micq.7

man1frdir   = @mandir@/fr/man1
man1fr_DATA = fr/micq.1
man5frdir   = @mandir@/fr/man5
man5fr_DATA = fr/micqrc.5
man7frdir   = @mandir@/fr/man7
man7fr_DATA = fr/micq.7

man1esdir   = @mandir@/es/man1
man1es_DATA = es/micq.1
man5esdir   = @mandir@/es/man5
man5es_DATA = es/micqrc.5
man7esdir   = @mandir@/es/man7
man7es_DATA = es/micq.7

man1rudir   = @mandir@/ru/man1
man1ru_DATA = ru/micq.1
man5rudir   = @mandir@/ru/man5
man5ru_DATA = ru/micqrc.5
man7rudir   = @mandir@/ru/man7
man7ru_DATA = ru/micq.7

man1ptdir   = @mandir@/pt_BR/man1
man1pt_DATA = pt_BR/micq.1
man5ptdir   = @mandir@/pt_BR/man5
man5pt_DATA = pt_BR/micqrc.5
man7ptdir   = @mandir@/pt_BR/man7
man7pt_DATA = pt_BR/micq.7

man1ukdir   = @mandir@/uk/man1
man1uk_DATA = uk/micq.1
#man5ukdir   = @mandir@/uk/man5
#man5uk_DATA = uk/micqrc.5
man7ukdir   = @mandir@/uk/man7
man7uk_DATA = uk/micq.7

man1srdir   = @mandir@/sr/man1
man1sr_DATA = sr/micq.1
man5srdir   = @mandir@/sr/man5
man5sr_DATA = sr/micqrc.5
man7srdir   = @mandir@/sr/man7
man7sr_DATA = sr/micq.7

man1itdir   = @mandir@/it/man1
man1it_DATA = it/micq.1
#man5itdir   = @mandir@/it/man5
#man5it_DATA = it/micqrc.5
#man7itdir   = @mandir@/it/man7
#man7it_DATA = it/micq.7

man_MANS    = micq.1    micq.7    micqrc.5
doc_DIST    = README README.SOCKS5 commands.txt icq091.txt html/*.html html/*.gif

