# $Id$ 

man1dedir   = @mandir@/de/man1
man1de_DATA = de/climm.1
man5dedir   = @mandir@/de/man5
man5de_DATA = de/climmrc.5
man7dedir   = @mandir@/de/man7
man7de_DATA = de/climmcmds.7

man1skdir   = @mandir@/sk/man1
man1sk_DATA = sk/climm.1
man5skdir   = @mandir@/sk/man5
man5sk_DATA = sk/climmrc.5
man7skdir   = @mandir@/sk/man7
man7sk_DATA = sk/climmcmds.7

man1frdir   = @mandir@/fr/man1
man1fr_DATA = fr/climm.1
man5frdir   = @mandir@/fr/man5
man5fr_DATA = fr/climmrc.5
man7frdir   = @mandir@/fr/man7
man7fr_DATA = fr/climmcmds.7

man1esdir   = @mandir@/es/man1
man1es_DATA = es/climm.1
man5esdir   = @mandir@/es/man5
man5es_DATA = es/climmrc.5
man7esdir   = @mandir@/es/man7
man7es_DATA = es/climmcmds.7

man1rudir   = @mandir@/ru/man1
man1ru_DATA = ru/climm.1
man5rudir   = @mandir@/ru/man5
man5ru_DATA = ru/climmrc.5
man7rudir   = @mandir@/ru/man7
man7ru_DATA = ru/climmcmds.7

man1ptdir   = @mandir@/pt_BR/man1
man1pt_DATA = pt_BR/climm.1
man5ptdir   = @mandir@/pt_BR/man5
man5pt_DATA = pt_BR/climmrc.5
man7ptdir   = @mandir@/pt_BR/man7
man7pt_DATA = pt_BR/climmcmds.7

man1ukdir   = @mandir@/uk/man1
man1uk_DATA = uk/climm.1
#man5ukdir   = @mandir@/uk/man5
#man5uk_DATA = uk/climmrc.5
man7ukdir   = @mandir@/uk/man7
man7uk_DATA = uk/climmcmds.7

man1srdir   = @mandir@/sr/man1
man1sr_DATA = sr/climm.1
man5srdir   = @mandir@/sr/man5
man5sr_DATA = sr/climmrc.5
man7srdir   = @mandir@/sr/man7
man7sr_DATA = sr/climmcmds.7

man1itdir   = @mandir@/it/man1
man1it_DATA = it/climm.1
#man5itdir   = @mandir@/it/man5
#man5it_DATA = it/climmrc.5
#man7itdir   = @mandir@/it/man7
#man7it_DATA = it/climmcmds.7

man1sedir   = @mandir@/se/man1
man1se_DATA = se/climm.1
man5sedir   = @mandir@/se/man5
man5se_DATA = se/climmrc.5
man7sedir   = @mandir@/se/man7
man7se_DATA = se/climmcmds.7

man_MANS    = climm.1    climmcmds.7    climmrc.5
doc_DIST    = README README.SOCKS5 commands.txt icq091.txt html/*.html html/*.gif

