# $Id$

EXTRA_DIST = beos.h buildmark.h color.h config.h config.h.in \
        conv.h datatype.h file_util.h i18n.h icq_response.h \
        micq.h micqconfig.h mreadline.h mselect.h msg_queue.h network.h \
        sendmsg.h server.h stamp-h stamp-h.in tabs.h \
        ui.h util.h util_table.h util_ui.h

