# $Id$

langdir = $(datadir)/micq
lang_DATA = C.i18n \
         de.i18n de_CH.i18n en.i18n \
         es.i18n fr.i18n ru.i18n ja.i18n ro.i18n \
         bg.i18n pt.i18n fi.i18n hr.i18n id.i18n it.i18n nl.i18n \
         pl.i18n se.i18n uk.i18n yu.i18n zh_CN.i18n sr.i18n \
         sr.i18n ja.i18n sk.i18n

EXTRA_DIST = i18n-extract i18n-number i18n-template $(lang_DATA)

